# opkomst

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  lefthook.yml  nieuwe-leden-feedback.md  openapi.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: auth.py  bootstrap.py  cli.py  config.py  database.py  main.py  migrate.py  mixins.py  permissions.py  seed.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 029e6226f08b_initial_schema.py  04f3e8d1997d_add_questionnaire_enabled_to_events.py  09310a8cd04a_initial_schema.py  17765cb75e74_user_chapters_multi.py  190f36ee419b_afdelingen_scd2_user_event_afdeling_id.py  1dd56d59248c_member_survey_responses.py  24ca586c0250_signup_feedback_email_status_message_id.py  2b9a94e0632f_normalise_email_lifecycle_into_signup_.py  37e4b9e81432_drop_member_survey_responses.py  3d26c9d716c4_forms_description_submissions_table.py  3e56b3f6d717_event_image_url.py  4a8e1f3c0a91_make_q3_welcome_required.py  56a40a5cd072_scd2_events.py  580c6db7929d_feedback_questions_tokens_responses.py  58ef80aabcdb_image_fields_on_forms_datepolls.py  5928b093bf42_rename_afdelingen_to_chapters.py  61fa8fc82dd6_forms_feature_form_form_questions_form_.py  6264ee3dc1ee_datepoll_location_coordinates.py  791f6dc72e3b_add_reminder_enabled_to_events_and_.py  7bb75a04d00e_initial_schema.py  85f09654b16b_merge_forms_event_image_branches.py  a9f17bdef8cc_scd2_users_drop_user_fks.py  b044a128555a_form_questions_kind_check_constraint.py  bcfd44b30512_datepoll_timeslots_slots_replace_dates_.py  be90a6723163_make_signup_display_name_and_source_.py  cf80197e2fe9_initial_schema.py  d16b4999a699_add_city_to_afdelingen.py  d415f0ffcf99_datepolls_feature.py  d6f9cc45552a_event_datetimes_are_naive_wall_clock.py  da1724d07105_add_help_options_to_events_and_help_.py  db9748610549_add_locale_to_events.py  dd24331630ae_add_archived_at_to_events.py  defb7b12f7c1_member_survey_q6_anything_else.py  e7e1d94c1c5d_registration_tokens.py  f382a112672b_edit_token_hash_on_submissions.py  f4abfc678b5d_add_email_verified_at_to_users.py  f6f3b8ee7105_add_latitude_longitude_to_events.py
backend/models/: __init__.py  afdelingen.py  audit.py  chapters.py  datepolls.py  email_dispatch.py  events.py  feedback.py  forms.py  member_survey.py  users.py
backend/routers/: admin.py  afdelingen.py  auth.py  chapters.py  datepolls.py  datepolls_public.py  dev.py  events.py  events_public.py  feedback.py  forms.py  forms_public.py  health.py  member_survey.py  signups.py  spa.py  webhooks.py  whatsapp.py
backend/schemas/: admin.py  afdelingen.py  auth.py  chapters.py  common.py  datepolls.py  events.py  feedback.py  forms.py  member_survey.py  whatsapp.py
backend/services/: access.py  admin_digest.py  afdelingen.py  branding.py  chapters.py  datepolls.py  edit_token.py  email.py  email_channels.py  email_dispatcher.py  email_lifecycle.py  email_reaper.py  email_templates.py  encryption.py  event_image.py  event_stats.py  events.py  feedback_questions.py  feedback_stats.py  feedback_worker.py  forms.py  ics.py  image.py  mail.py  mail_lifecycle.py  member_survey_questions.py  observability.py  qr.py  rate_limit.py  ratings.py  reminder_worker.py  scd2.py  security_headers.py  slug.py  user_chapters.py  whatsapp.py
backend/services/email/: __init__.py  backends.py  config.py  console.py  identifiers.py  observability.py  sender.py  smtp.py  templates.py  testing.py  urls.py
backend/services/mail_templates/: base.html
docs/: architecture.md  audit-2026-04-26.md  deploy.md  design-datepolls.md  design-edit-link.md  design-forms.md  design-public-pages-ux.md  email-architecture-audit.md  email-robustness-audit-2026-04-27.md  email-robustness-plan.md  execution-plan.md  hardening-plan.md  phase-1-5-review.md  phase-2-review.md  phase-3-review.md  phase-4-review.md  phase-5-5-5-7-review.md  phase-5-6-review.md  plan-whatsapp-blast.md  principles-architecture.md  principles-ux.md  runbook.md  scd2-events-migration.md  security-audit-2026-04-27.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  public-datepoll.html  public-event.html  public-form.html  tsconfig.json  vite.config.ts
frontend/e2e/: critical-path.spec.ts  edit-link.spec.ts  forms-critical-path.spec.ts
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/__tests__/: composables.test.ts  csv.test.ts  emoji-picker.test.ts  event-urls.test.ts  format.test.ts  i18n.test.ts  map-link.test.ts  permissions.test.ts  question-editor.test.ts  router-guards.test.ts  stores.test.ts  use-whatsapp.test.ts  validate.test.ts  whatsappFormat.test.ts
frontend/src/api/: client.ts  queries.ts  schema.ts  types.ts
scripts/: _backup_redact.py  backup.sh  check_scd2_safety.sh  generate_openapi.py  restore_drill.sh  verify_env.py
tests/: _worker_helpers.py  conftest.py  test_access.py  test_admin_digest.py  test_admin_users.py  test_auth.py  test_backup_redaction.py  test_batch_limit.py  test_chapter_service.py  test_chapters_router.py  test_clock_smoke.py  test_concurrent_races.py  test_config.py  test_datepoll_dates.py  test_datepoll_slots.py  test_datepolls_public.py  test_datepolls_router.py  test_edit_link.py  test_email_dispatcher.py  test_email_lifecycle.py  test_email_lifecycle_e2e.py  test_email_state_machine.py  test_event_image.py  test_event_time_naive.py  test_events_router_extras.py  test_fake_email_smoke.py  test_feedback_router.py  test_feedback_token_expiry.py  test_feedback_worker.py  test_form_questions.py  test_forms_public.py  test_forms_router.py  test_member_survey.py  test_observability.py  test_parallel_workers.py  test_partial_send_reaper.py  test_permissions.py  test_post_event_purge.py  test_privacy.py  test_privacy_invariant_property.py  (+11 more)
tests/_helpers/: __init__.py  db_reset.py  events.py  signups.py  users.py
(+147 files in other folders)
