[project]
name = "opkomst"
version = "0.1.0"
description = "Privacy-first event sign-up tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic[email]>=2.11",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "structlog>=24",
    "cryptography>=44",
    "qrcode[pil]>=8",
    "nanoid>=2",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "uuid-utils>=0.10",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.7",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pyright]
include = ["backend", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.13"

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]
