[project]
name = "opkomst"
version = "0.1.0"
description = "Privacy-first event sign-up tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic[email]>=2.11",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "structlog>=24",
    "cryptography>=44",
    "qrcode[pil]>=8",
    "nanoid>=2",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "uuid-utils>=0.10",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "sentry-sdk>=2.58.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "ruff>=0.7",
    "pyright>=1.1",
    "freezegun>=1.5",
    "hypothesis>=6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008 fires on every FastAPI ``Depends(...)`` default — that's the
# canonical pattern, not a bug. UP047 wants PEP 695 generics, but
# we're staying on classic ``TypeVar`` for compatibility with
# SQLAlchemy mapper introspection.
ignore = ["B008", "UP047"]

[tool.pyright]
include = ["backend", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.13"

[tool.pytest.ini_options]
# Tests share a per-process tempfile DB; xdist's process-per-worker
# split would each create their own DB and race the conftest setup.
# Stay in-band until we wire a per-worker DB fixture.
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=63"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "backend/alembic/*",
    "backend/seed.py",
    # Live SMTP backend — tested via aiosmtpd integration test in B4.1
    # (not yet present); excluded from the coverage gate until then.
    "backend/services/email/smtp.py",
]
