[project]
name = "opkomst"
version = "0.1.0"
description = "Privacy-first event sign-up tool"
license = "EUPL-1.2"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic[email]>=2.11",
    "pydantic-settings>=2.14.1",
    # JWT signing/verifying. ``pyjwt`` is the canonical library
    # and is actively maintained; ``python-jose`` has had security
    # advisories and lower commit cadence. Smaller wheel too.
    "pyjwt>=2.10",
    "structlog>=24",
    "cryptography>=44",
    # No ``[pil]`` extra — the QR endpoint serves SVG, rendered
    # via ``qrcode.image.svg`` which is pure Python. Dropping
    # Pillow saves ~5 MB of wheels + the ``libjpeg62-turbo`` apt
    # dep we used to need for it.
    "qrcode>=8",
    "nanoid>=2",
    "uuid-utils>=0.15.0",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "sentry-sdk>=2.60.0",
    # Async HTTP client for the Evolution API proxy in
    # ``services/whatsapp.py``. Also pulled in by Starlette's
    # ``TestClient`` so tests would see it regardless.
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "ruff>=0.15.13",
    "pyright>=1.1",
    "freezegun>=1.5",
    "hypothesis>=6.152.7",
    # Mocks ``httpx`` calls in unit tests so the Evolution API proxy
    # can be exercised without a real instance.
    "respx>=0.21",
]

[tool.ruff]
line-length = 120
extend-exclude = ["backend/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008 fires on every FastAPI ``Depends(...)`` default — that's the
# canonical pattern, not a bug. UP047 wants PEP 695 generics, but
# we're staying on classic ``TypeVar`` for compatibility with
# SQLAlchemy mapper introspection.
ignore = ["B008", "UP047"]

[tool.pyright]
include = ["backend", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.13"

[tool.pytest.ini_options]
# Each xdist worker gets its own ``opkomst_test_<worker>`` database
# (see ``conftest._TEST_DB_URL``). ``--dist=worksteal`` lets idle
# workers steal pending tests from busy ones, which packs the
# heavy property/e2e tests across cores instead of stalling on
# whoever drew the longest straw. Module-level state in test files
# (the ``_slug_counter`` in tests/_helpers/events.py, fake-email
# installs) is process-local — but each worker has its own DB so
# slug collisions across workers don't happen. Coverage is
# collected via pytest-cov's xdist integration. Override at the
# CLI with ``-n 0`` for single-process runs (handy when debugging
# a fixture).
addopts = "-n auto --dist=worksteal --cov=backend --cov-report=term-missing --cov-fail-under=64"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "backend/alembic/*",
    "backend/seed.py",
    # Live SMTP backend — tested via aiosmtpd integration test in B4.1
    # (not yet present); excluded from the coverage gate until then.
    "backend/services/email/smtp.py",
]
